fix(ui): module3