@@ -20,13 +20,20 @@ dependencies {
     implementation project(':lyrics')
     implementation project(':ui')
 //    implementation project(':stub') // Include the stub module for testing purposes
+    
     // for testing
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
+
 application {
     mainClass = 'ac.cwnu.synctune.Main'
+    // JavaFX 실행을 위한 JVM 인수 추가
+    applicationDefaultJvmArgs = [
+        '--add-opens', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED'
+    ]
 }
+
 test {
     useJUnitPlatform()
 }
